--- a/draw2matrix.ipynb
+++ b/draw2matrix.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -27,12 +27,12 @@
     "\n",
     "new_im = im.convert('L').rotate(90).filter(ImageFilter.GaussianBlur())\n",
     "new_im.show()\n",
-    "new_im.save('lena_sqaure_pillow.jpg', quality = 95)"
+    "new_im.save('resultats/lena_sqaure_pillow.jpg', quality = 95)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -61,10 +61,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fa5bf06d4f0>"
+       "<matplotlib.image.AxesImage at 0x7fa5be65e460>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -107,18 +107,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fa5bd9b2520>"
-      ]
-     },
-     "execution_count": 87,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0. 0. 0. 1. 1. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 1. 1. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 1. 0. 1. 1. 0. 0. 0.]\n",
+      " [0. 0. 0. 1. 0. 0. 1. 0. 0. 0.]\n",
+      " [0. 0. 1. 1. 0. 0. 1. 1. 0. 0.]\n",
+      " [0. 0. 1. 0. 0. 0. 0. 1. 0. 0.]\n",
+      " [0. 0. 1. 1. 1. 1. 1. 1. 0. 0.]\n",
+      " [0. 1. 1. 0. 0. 0. 0. 1. 1. 0.]\n",
+      " [0. 1. 0. 0. 0. 0. 0. 0. 1. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]]\n"
+     ]
     },
     {
      "data": {
@@ -152,11 +158,21 @@
     "\n",
     "# IMAGE DIGITIZATION\n",
     "# Test sur une ecriture manuscrite\n",
-    "im = np.array(Image.open('sources/A.png').resize((10,10)))\n",
-    "th = 128\n",
-    "im_bool = (im > th) * 255\n",
+    "im = np.array(Image.open('sources/A.png').resize((10,10))) # Importation de l'image, compression en une image de 10x10px et transformation en une matrice numpy\n",
+    "th = 128 # Valeur seuil de 128\n",
+    "im_bool = (im > th) * 255 # On compare chaque pixel RGB de im a la valeur seuil et on obtien une valeur booleene True ou False\n",
     "plt.matshow(im)\n",
-    "plt.matshow(im_bool)"
+    "plt.matshow(im_bool)\n",
+    "\n",
+    "# Passage de matrice RGB a matrice 2D\n",
+    "matx = np.zeros((10,10))\n",
+    "for i in range(9):\n",
+    "    for j in range(9):\n",
+    "        if (im < th)[i,j,0]:\n",
+    "            matx[i,j] = 1\n",
+    "        else:\n",
+    "            matx[i,j] = 0\n",
+    "print(matx)\n"
    ]
   },
   {
