--- a/README.org
+++ b/README.org
@@ -14,8 +14,11 @@
     Etat actuel (26/09): la binarization fonctionne mais il reste encore a tester sur differents echantillons afin de voir si les resultats sont exploitale.
     La binarization fonctionne et convertit bien une image en une matrice binaire de taille donne.
 
-*** TODO Apprentissage Machine pour un neurone
-    L'apprentissage machine fonctionne, il suffit de lui donner une lettre et un nombre de fichier pour qu'une fonction calcule le poid W
+*** DONE Apprentissage Machine pour un neurone
+    CLOSED: [2020-10-06 Tue 16:36]
+    L'apprentissage machine fonctionne, il suffit de lui donner une lettre et un nombre de fichier pour qu'une fonction calcule le poid W.
+    Le neuronne est capable de reconnaitre une lettre et de donner un quotient qui indique le niveau de confiance de la reconnaissance.
+    Plus ce quotient est elevee (proche de 1) plus le neurone est confiant qu'il s'agit de la bonne lettre.
 
 *** TODO Reseau de neuronne
     Objectifs: plusieurs neurones avec un poid W correspondant chacun a une lettre.
