--- a/README.org
+++ b/README.org
@@ -23,7 +23,14 @@
 *** TODO Reseau de neuronne
     Objectifs: plusieurs neurones avec un poid W correspondant chacun a une lettre.
     Calcul des coefficicents: score du candidat, score ideal pour le poid-model et le quotient de reconnaissance.
+    
+**** DONE Base de donnees EMNIST
+     CLOSED: [2020-10-13 Tue 17:47]
     Il ne manque plus que les donnees pour pouvoir mettre en oeuvre le reseau de neuronnes.
+    Base de donnees EMNIST obtenues, programme capable de lire et afficher une lettre de la base de donnees
+    
+**** TODO Implementation de la base de donnees dans le reseau de neurones
+     A faire
 
 *** TODO RN pour des mots
     L'objectif ici est de pouvoir detecter des mots et des espaces pour pouvoir numeriser des phrases manuscrite.
