--- a/ReseauDeNeuronnes.ipynb
+++ b/ReseauDeNeuronnes.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Temps d'execution du programme: 34.27927875518799 s\n"
+      "Temps d'execution du programme: 115.38338422775269 s\n"
      ]
     }
    ],
@@ -23,7 +23,7 @@
     "start = time.time()\n",
     "\n",
     "im_size = 28\n",
-    "num_images = 20000\n",
+    "num_images = 100000\n",
     "k = 26\n",
     "\n",
     "images_training, labels_training = extract_training_samples('letters')\n",
@@ -78,15 +78,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.366\n",
-      "Temps d'execution du programme: 103.83794569969177 s\n"
+      "0.534\n",
+      "Temps d'execution du programme: 51.48766565322876 s\n"
      ]
     }
    ],
@@ -94,7 +94,7 @@
     "start = time.time()\n",
     "\n",
     "# Test verifiant si le reseau de neuronnes est performant\n",
-    "num_images = 2000\n",
+    "num_images = 1000\n",
     "Qstat = 0\n",
     "for i in range(int(num_images - 1)):\n",
     "    if Q(images_test[i]) == int(labels_test[i] - 1):\n",
@@ -117,10 +117,19 @@
     "#\n",
     "# 8000/8000 0.413 409.5 s\n",
     "\n",
-    "# 15000/15000 0.487 776.2s\n",
-    "# 15000/2000  0.587 102.0s\n",
-    "# 20000/20000 0.491 1023.2s\n",
-    "# 20000/2000  0.580 102.7s\n"
+    "# 15000/15000  0.487 776.2s\n",
+    "# 15000/2000   0.587 102.0s\n",
+    "# 20000/20000  0.491 1023.2s\n",
+    "# 20000/2000   0.580 102.7s\n",
+    "# 50000/2000   0.570 127.9s\n",
+    "# 100000/2000  0.567 101.7s\n",
+    "# 100000/4000  0.568 249.9s\n",
+    "# 100000/6000  0.466 424.0s\n",
+    "# 100000/8000  0.423 550.5s\n",
+    "# 100000/10000 0.411 534.3s\n",
+    "# 100000/20000 0.490 1083.5s\n",
+    "#\n",
+    "# limite images_test: 20800"
    ]
   },
   {
